--- a/assets/css/style-liberty.css
+++ b/assets/css/style-liberty.css
@@ -57,7 +57,7 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #fff;
+  background: var(--theme-dark);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent
 }
