--- a/assets/css/style-liberty.css
+++ b/assets/css/style-liberty.css
@@ -11811,7 +11811,7 @@ fieldset:disabled .btn {
   --border-color-light: #eee;
   --iframe-filter: grayscale(0%);
   --bg-grey: #f6f6f6;
-  --bg-light: #fbfbfb;
+  --bg-light: #27282b;
   --bg-dark-color: #fff;
   --disable-color: #d8d6d6;
   --box-shadow-color: rgb(0 0 0 / 10%);
@@ -11828,7 +11828,7 @@ fieldset:disabled .btn {
   --border-color-light: rgba(255, 255, 255, 0.2);
   --iframe-filter: grayscale(100%);
   --bg-grey: #031f25;
-  --bg-light: #05242a;
+  --bg-light: #27282b;
   --bg-dark-color: #27282b;
   --disable-color: #5d5d5d;
   --border-color: rgba(255, 255, 255, 0.1);
@@ -11848,7 +11848,7 @@ body,
 html {
   margin: 0;
   padding: 0;
-  background: var(--bg-color);
+  background: var(--bg-dark-color);
   color: var(--font-color);
   font-family: 'DM Sans', sans-serif;
 }
